[project]
name = "0123d-umlips-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ase>=3.25.0",
    "jinja2>=3.1.6",
    "marimo>=0.14.8",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "seaborn>=0.13.2",
]
